extending native elem

--- a/index.html
+++ b/index.html
@@ -23,12 +23,16 @@
             <slot name="my-text">My default text</slot>
             <br/>
             <b></b>
+            <button is="fancy-button"></button>
         </p>
+       
     </template>
 
     <my-paragraph msg="this is message is from my-paragraph attribute">
         <span slot="my-text" id="slot-id"></span>
     </my-paragraph>
+
+    <!-- <button is="fancy-button">Fancy button!</button> -->
 </body>
 
 </html>
