--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
-    <script src="./v/jwc-1.0.0.js"></script>
+    <script src="./v/jwc-1.1.0.js"></script>
     <script src="app.js"></script>
 </head>
 
@@ -31,7 +31,7 @@
        
     </template>
 
-    <my-paragraph msg="this is message is from my-paragraph attribute">
+    <!-- <my-paragraph msg="this is message is from my-paragraph attribute">
         <span slot="my-text" id="slot-id"></span>
     </my-paragraph>
 
@@ -42,9 +42,12 @@
     <my-component></my-component>
     <my-component></my-component>
     <my-other-component></my-other-component>
-    <my-other-component></my-other-component>
+    <my-other-component></my-other-component> -->
 
-    <!-- <button is="fancy-button">Fancy button!</button> -->
+    <fluent-component></fluent-component>
+
+    <button is="fancy-button">Fancy button!</button>
+    <button is="fluent-button">Change color</button>
 </body>
 
 </html>
